[gd_scene load_steps=9 format=2]

[ext_resource path="res://GameManager/Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Themes/HealthBar.tres" type="Theme" id=2]
[ext_resource path="res://GameManager/Sprites/GunPowder.png" type="Texture" id=3]
[ext_resource path="res://GameManager/Sprites/Stone.png" type="Texture" id=4]
[ext_resource path="res://GameManager/Sprites/Wood.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.533333, 0.870588, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 30.0
bg_color = Color( 0.67451, 0.156863, 0.278431, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.419608, 0.14902, 0.262745, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 20

[sub_resource type="Theme" id=3]
PanelContainer/styles/panel = SubResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="DashBar" type="ProgressBar" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -300.0
margin_top = 81.0
margin_right = -30.0
margin_bottom = 136.0
hint_tooltip = "Énergie"
theme = ExtResource( 2 )
custom_styles/fg = SubResource( 1 )
percent_visible = false

[node name="HealthBar" type="ProgressBar" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -300.0
margin_top = 20.0
margin_right = -30.0
margin_bottom = 75.0
hint_tooltip = "Vie"
theme = ExtResource( 2 )
percent_visible = false

[node name="Gunpowder" type="Panel" parent="."]
margin_left = 345.0
margin_top = 20.0
margin_right = 495.0
margin_bottom = 80.0
hint_tooltip = "Poudre a canon"

[node name="GunpowderSprite" type="TextureRect" parent="Gunpowder"]
margin_left = 6.0
margin_top = 6.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="GunpowderCount" type="Label" parent="Gunpowder"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -42.0
margin_bottom = 31.0
text = "000"
align = 1
valign = 1

[node name="Stone" type="Panel" parent="."]
margin_left = 182.0
margin_top = 20.0
margin_right = 332.0
margin_bottom = 80.0
hint_tooltip = "Pierre"

[node name="StoneSprite" type="TextureRect" parent="Stone"]
margin_left = 6.0
margin_top = 6.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )

[node name="StoneCount" type="Label" parent="Stone"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -42.0
margin_bottom = 31.0
text = "000"
align = 1
valign = 1

[node name="Wood" type="Panel" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 170.0
margin_bottom = 80.0
hint_tooltip = "Bois"

[node name="WoodSprite" type="TextureRect" parent="Wood"]
margin_left = 6.0
margin_top = 6.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="WoodCount" type="Label" parent="Wood"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -42.0
margin_bottom = 31.0
text = "000"
align = 1
valign = 1

[node name="ControlsContainer" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -248.0
margin_top = -127.0
margin_right = 248.0
margin_bottom = 127.0
theme = SubResource( 3 )

[node name="Controls" type="Label" parent="ControlsContainer"]
margin_left = 30.0
margin_top = 20.0
margin_right = 491.0
margin_bottom = 233.0
rect_pivot_offset = Vector2( -239, -57 )
text = "Bouger : AWD
Pêcher : MMB
Canon : LMB
Dash : RMB
Personalisation : C
Zoom : Z"
